--- a/nardfrontend/src/App.css
+++ b/nardfrontend/src/App.css
@@ -15,13 +15,13 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(155, 45, 45);
 }
 
 .App-link {
@@ -35,4 +35,26 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#LBButton {
+  align-items: left;
+  /* position: absolute; */
+  justify-content: left;
+  z-index: 10000;
+  background-color: rgb(6, 233, 153);
+}
+
+#MPDD {
+  align-items: left;
+  position: left;
+  justify-content: left;
+  z-index: 10000;
+}
+
+#Mtitle {
+  color: rgb(0, 2, 2);
+  font-weight: bolder;
+  font-size: 5vh;
+  text-shadow: #282c34;
 }
