--- a/nardfrontend/src/Nav.css
+++ b/nardfrontend/src/Nav.css
@@ -1,7 +1,14 @@
 #thenav {
   position: absolute;
   z-index: 20000;
-  background-color: antiquewhite;
+  background-color: rgb(39, 116, 175, 0.85);
   height: 120px;
   width: 100%;
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+#uslogo {
+  font-weight: bolder;
+  font-size: 3vh;
 }
