--- a/nardfrontend/src/App.css
+++ b/nardfrontend/src/App.css
@@ -53,10 +53,12 @@
 }
 
 #Mtitle {
+  display: flex;
+  justify-content: center flex;
   color: rgb(14, 6, 11);
   font-weight: bolder;
   text-shadow: 3px 3px 3px #61dafb;
-  font-size: 8vh;
+  font-size: 7vh;
   margin-top: 19vh;
   text-shadow: black;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
