--- a/nardfrontend/src/index.css
+++ b/nardfrontend/src/index.css
@@ -169,22 +169,6 @@ code {
   border: 5px rgb(249, 247, 247) double;
 }
 
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-.pulse {
-  animation: pulse 500ms linear;
-}
-
 #BBButton:hover {
   background-color: rgb(122, 129, 181);
   transform: scale(1.1);
@@ -436,3 +420,34 @@ code {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 } */
+
+/* Modal container */
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 0;
+  left: 0;
+  color: #01067c;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+}
+
+/* Modal content */
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  color: #01067c;
+}
+
+/* Close button */
+.close {
+  position: relative;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
