--- a/nardfrontend/src/Nav.css
+++ b/nardfrontend/src/Nav.css
@@ -1,11 +1,18 @@
 #thenav {
   position: absolute;
   z-index: 20000;
-  background-color: rgba(33, 94, 140, 0.65);
+  background: linear-gradient(
+    -225deg,
+    #060937 0,
+    #a2a5e6 29%,
+    #cfcde7 67%,
+    #07072d 100%
+  );
   height: 120px;
   width: 100%;
   text-decoration: none;
   color: whitesmoke;
+  opacity: 0.75;
 }
 
 #RButtdiv {
@@ -16,13 +23,26 @@
   justify-content: flex-end;
   align-items: end;
   font-weight: bolder;
-  font-size: 3vh;
-  background-color: #0d569e;
-  color: wheat;
+  font-size: 4vh;
+  background-color: #4197ed;
+  color: rgb(18, 6, 231);
+  border-radius: 30px;
+  border: 14px black double;
 }
-#uslogo {
+/* #uslogo {
   font-weight: bolder;
   font-size: 3vh;
+  height: 5vh;
+  size: 20px;
+  opacity: 0.65;
+} */
+
+#logous {
+  /* font-weight: bolder; */
+  font-size: 20vh;
+  height: 13vh;
+  /* size: 20px; */
+  opacity: 0.65;
 }
 
 #RightNav {
@@ -70,7 +90,7 @@ a:visited {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 } */
 
-.darkBG {
+/* .darkBG {
   background-color: rgba(0, 0, 0, 0.2);
   width: 100vw;
   height: 100vh;
@@ -79,9 +99,8 @@ a:visited {
   left: 50%;
   transform: translate(-50%, -50%);
   position: absolute;
-}
-
-.centered {
+} */
+\ .centered {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -89,10 +108,10 @@ a:visited {
 }
 
 .modal {
-  width: 250px;
-  height: 170px;
-  background: white;
-  color: white;
+  width: 450px;
+  height: 870px;
+  background: rgb(47, 7, 7);
+  color: rgb(148, 10, 10);
   z-index: 10;
   border-radius: 16px;
   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
@@ -109,7 +128,7 @@ a:visited {
 .heading {
   margin: 0;
   padding: 10px;
-  color: #2c3e50;
+  color: #b7c0c8;
   font-weight: 500;
   font-size: 18px;
   text-align: center;
@@ -117,9 +136,10 @@ a:visited {
 
 .modalContent {
   padding: 10px;
-  font-size: 14px;
+  font-size: 18px;
   color: #2c3e50;
   text-align: center;
+  background-color: #2c3e50;
 }
 
 .modalActions {
