--- a/nardfrontend/src/Nav.css
+++ b/nardfrontend/src/Nav.css
@@ -12,7 +12,7 @@
   width: 100%;
   text-decoration: none;
   color: whitesmoke;
-  opacity: 0.75;
+  opacity: 0.85;
 }
 
 #RButtdiv {
@@ -28,6 +28,7 @@
   color: rgb(18, 6, 231);
   border-radius: 30px;
   border: 14px black double;
+  margin: 25px;
 }
 /* #uslogo {
   font-weight: bolder;
