--- a/nardfrontend/src/App.css
+++ b/nardfrontend/src/App.css
@@ -69,7 +69,7 @@
 }
 
 footer {
-  display: block;
+  display: flex;
   position: fixed;
   width: 100%;
   height: 8vh;
@@ -77,7 +77,7 @@ footer {
   color: white;
   font-weight: bolder;
   font-size: 18px;
-  justify-content: flex;
+  justify-content: end;
   /* margin-top: 3vh; */
 }
 
