--- a/nardfrontend/src/index.css
+++ b/nardfrontend/src/index.css
@@ -510,9 +510,11 @@ code {
 }
 
 #myVideo {
+  position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  z-index: 50000;
 }
 
 .flexcontent {
