--- a/nardfrontend/src/index.css
+++ b/nardfrontend/src/index.css
@@ -359,11 +359,30 @@ code {
 }
 
 #Battlebox {
-  background-color: beige;
   text-align: center;
-  color: grey;
+  /* position: relative; */
+  justify-content: start;
+  color: rgb(3, 0, 0);
+  font-weight: 900;
+  text-shadow: 4px 4px 4px#b220b7;
   min-height: 12vh;
-  opacity: 0.9;
+  max-height: 27vh;
+  z-index: 80000;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+#TD {
+  font-size: 20vh;
+  text-align: center;
+  /* position: relative; */
+  justify-content: start;
+  color: rgb(3, 0, 0);
+  font-weight: 900;
+  text-shadow: 4px 4px 4px#b220b7;
+  /* min-height: 12vh; */
+  max-height: 27vh;
+  z-index: 80000;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 /* #P1HP {
@@ -514,7 +533,7 @@ code {
   text-shadow: 4px 4px 4px #1a1e1f;
 }
 
-#video-container {
+.video-container {
   position: fixed;
   top: 0;
   left: 0;
@@ -530,6 +549,17 @@ code {
   height: 100%;
   object-fit: cover;
   z-index: 50000;
+}
+
+#myVideo2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  z-index: 50000;
+  opacity: 0.3;
+  object-fit: cover;
 }
 
 .flexcontent {
