--- a/nardfrontend/src/index.css
+++ b/nardfrontend/src/index.css
@@ -1,10 +1,4 @@
 .background-container {
-  /* Set the background image */
-  /* background-image: url("./Assets/bgart.png"); */
-  /* margin-bottom: 200px; */
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   content: "";
@@ -78,9 +72,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-image: url("./Assets/bgart.png");
-  opacity: 0.4;
-  background-repeat: repeat; */
 }
 
 code {
@@ -88,27 +79,11 @@ code {
     monospace;
 }
 
-/* .dropdown-menu {
-  position: absolute;
 
-  max-height: 200px;
-  overflow-y: auto;
-} */
 
 .dropdown-menu li a:focus {
   background-color: lightgray;
 }
-
-/* .menu {
-  position: absolute;
-
-  list-style-type: none;
-  margin: 5px 0;
-  padding: 0;
-
-  border: 1px solid grey;
-  width: 150px;
-} */
 
 .menu > li {
   margin: 0;
@@ -135,7 +110,6 @@ code {
   border: none;
   padding: 5px;
   margin: 0;
-  /* font: inherit; */
   cursor: pointer;
 }
 
@@ -204,7 +178,6 @@ code {
   padding: 15px 12px;
   text-align: center;
   text-decoration: none;
-  /* display: inline-block; */
   font-size: 22px;
   margin-top: 10px;
   border-radius: 30px;
@@ -340,6 +313,14 @@ code {
   font-size: 18px;
 }
 
+#trophy {
+  max-width: 200px;
+  justify-content: center;
+  display: flex;
+  
+  
+}
+
 #PauseButton {
   background-color: rgba(37, 4, 75, 0.85);
   color: rgb(248, 237, 237);
@@ -360,7 +341,6 @@ code {
 
 #Battlebox {
   text-align: center;
-  /* position: relative; */
   justify-content: start;
   color: rgb(3, 0, 0);
   font-weight: 900;
@@ -372,29 +352,18 @@ code {
 }
 
 #TD {
-  font-size: 20vh;
+  font-size: 3vh;
   text-align: center;
-  /* position: relative; */
   justify-content: start;
   color: rgb(3, 0, 0);
   font-weight: 900;
   text-shadow: 4px 4px 4px#b220b7;
-  /* min-height: 12vh; */
   max-height: 27vh;
   z-index: 80000;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-/* #P1HP {
-  justify-content: left;
-  text-align: left;
-  margin-left: 20vh;
-}
-#P2HP {
-  justify-content: right;
-  text-align: right;
-  margin-right: 20vh;
-} */
+
 
 #P1S {
   justify-content: left;
@@ -423,21 +392,6 @@ code {
   color: #01067c;
 }
 
-/* .PlayerOneSprite {
-  border: black 10px solid;
-  height: 25vh;
-  width: 30%;
-} */
-/* 
-.PlayerTwoSprite {
-  border: black 10px solid;
-  height: 25vh;
-  width: 30%;
-} */
-/* 
-.BPSprites {
-  margin-top: 3vh;
-} */
 
 #DBMD {
   margin-top: 3vh;
@@ -464,9 +418,6 @@ code {
   justify-content: space-around center;
 }
 
-/* .Player {
-
-} */
 
 #homePage {
   display: flex;
@@ -486,7 +437,6 @@ code {
 }
 
 .battlePage {
-  /* position: fixed; */
   display: flex;
   justify-content: space-around;
 }
@@ -539,8 +489,8 @@ code {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 40000; /* Ensure the video appears on top of other elements */
-  pointer-events: none; /* Allow interaction with elements underneath */
+  z-index: 40000; 
+  pointer-events: none; 
 }
 
 #myVideo {
@@ -592,7 +542,7 @@ code {
   position: relative;
 } */
 
-/* .dropdown-menu {
+.dropdown-menu {
   position: relative;
   top: calc(100% + 5px);
   left: 0;
@@ -601,7 +551,7 @@ code {
   padding: 5px;
   margin: 0;
   list-style: none;
-} */
+}
 
 .dropdown-menu li {
   padding: 5px;
@@ -619,14 +569,6 @@ code {
   cursor: pointer;
 }
 
-/* body {
-  background: black;
-  font-family: "Poppins", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-} */
-
-/* Modal container */
 .modal {
   display: flex;
   justify-content: center;
@@ -654,7 +596,6 @@ code {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Close button */
 .close {
   position: relative;
   top: 10px;
